--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,8 @@ header {
   width: 100%;
   top: 0;
   z-index: 999;
-  transition: 0.5s; }
+  transition: 0.5s;
+  box-shadow: 0 5px 30px 13px rgba(0, 0, 0, 0.9); }
   header .container {
     padding: 0 85px; }
   header nav {
@@ -328,7 +329,32 @@ header {
     opacity: 1;
     position: relative;
     height: 100%;
-    transition: opacity 0.5s, top 0.7s cubic-bezier(0.83, 0.38, 0.18, 2.11) 0.1s; }
+    transition: opacity 0.5s;
+    animation: easeOutBounce 1s 0s forwards; }
+@keyframes easeOutBounce {
+  0% {
+    top: -900px;
+    animation-timing-function: ease-in; }
+  33% {
+    top: 0;
+    animation-timing-function: ease-out; }
+  50% {
+    top: -184px;
+    animation-timing-function: ease-in; }
+  66% {
+    top: 0;
+    animation-timing-function: ease-out; }
+  82% {
+    top: -36px;
+    animation-timing-function: ease-in; }
+  92% {
+    top: 0;
+    animation-timing-function: ease-out; }
+  97% {
+    top: -18px;
+    animation-timing-function: ease-in; }
+  100% {
+    top: 0; } }
     .allCoursesBox .container .popup-closeButton {
       position: absolute;
       top: 7%;
@@ -519,3 +545,144 @@ header {
           margin: -5px 0 7px 0; }
         .instructors-block-item .title .desc {
           text-align: center; }
+
+.feedback {
+  padding: 105px 0;
+  height: 710px;
+  background: center -120px url("/img/feedback-bg.png") no-repeat;
+  color: #F0F0FD; }
+  .feedback-wrapper {
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5); }
+  .feedback h2:after {
+    background-color: #103B99; }
+  .feedback-tagline {
+    text-align: center;
+    font-size: 16px;
+    padding: 0 60px;
+    margin-top: 30px;
+    margin-bottom: -4px; }
+  .feedback form {
+    margin-top: 60px; }
+    .feedback form input, .feedback form textarea {
+      margin-bottom: 30px; }
+    .feedback form input, .feedback form textarea, .feedback form .course-select {
+      width: 100%;
+      height: 45px;
+      border: none;
+      border-radius: 5px;
+      background: #F0F0FD;
+      color: #000;
+      font-size: 16px;
+      padding: 9px;
+      line-height: 30px; }
+    .feedback form textarea[name="message"] {
+      height: 90px;
+      resize: none; }
+    .feedback form div.course-select {
+      position: relative;
+      color: #757575;
+      cursor: pointer;
+      transition: 300ms; }
+    .feedback form .course-list-block .course-select-arrow {
+      background: url("/img/select-arrow.png") no-repeat;
+      height: 9px;
+      position: absolute;
+      width: 19px;
+      top: 20px;
+      right: 30px;
+      z-index: 30;
+      transition: 300ms;
+      cursor: pointer; }
+    .feedback form .course-list-block .course-list {
+      position: absolute;
+      padding: 0;
+      width: 270px;
+      z-index: 10;
+      transition: 250ms;
+      top: 45px;
+      box-shadow: 0 12px 19px 0 #000;
+      transform-origin: center 0;
+      perspective: 1000px;
+      perspective-origin: left center;
+      transform: scaleY(0); }
+      .feedback form .course-list-block .course-list-item {
+        list-style: none;
+        background: #F0F0FD;
+        color: #2f2f2f;
+        border-top: 1px solid #c1c1c1;
+        white-space: nowrap;
+        height: 45px;
+        position: relative; }
+        .feedback form .course-list-block .course-list-item:hover .img {
+          transform: translate(-81px, -43px) scale(4) rotateZ(-5deg);
+          box-shadow: 2px 2px 7px 1px #000;
+          transition: 650ms;
+          cursor: pointer;
+          position: relative;
+          z-index: 50; }
+          .feedback form .course-list-block .course-list-item:hover .img .hover-box {
+            background: rgba(24, 39, 72, 0.3);
+            display: block;
+            position: absolute;
+            height: 100%;
+            width: 50%;
+            white-space: normal;
+            font-size: 10px;
+            text-transform: uppercase;
+            font-weight: 300;
+            padding: 10px 6px;
+            color: #F0F0FD;
+            cursor: pointer; }
+            .feedback form .course-list-block .course-list-item:hover .img .hover-box:hover {
+              background: rgba(24, 39, 72, 0.7); }
+        .feedback form .course-list-block .course-list-item:hover .cost {
+          z-index: 100;
+          background: #182748;
+          color: #F0F0FD;
+          height: 44px;
+          padding: 10px;
+          font-size: 20px;
+          top: -100px;
+          left: 10px;
+          transition: transform 250ms 500ms;
+          transform: none; }
+        .feedback form .course-list-block .course-list-item:hover .title {
+          min-width: 80%;
+          width: fit-content;
+          background: #182748;
+          color: #F0F0FD;
+          line-height: 44px;
+          box-shadow: 5px 5px 11px 1px #000;
+          transition: box-shadow 300ms;
+          font-weight: 300;
+          position: relative;
+          cursor: pointer;
+          z-index: 100; }
+        .feedback form .course-list-block .course-list-item:last-of-type {
+          border-bottom-left-radius: 5px;
+          border-bottom-right-radius: 5px; }
+          .feedback form .course-list-block .course-list-item:last-of-type .img {
+            border-bottom-left-radius: 5px; }
+          .feedback form .course-list-block .course-list-item:last-of-type:hover .img {
+            border-bottom-left-radius: 0; }
+        .feedback form .course-list-block .course-list-item .img {
+          height: 44px;
+          width: 73px;
+          background-size: cover;
+          background-position-x: center;
+          display: inline-block; }
+          .feedback form .course-list-block .course-list-item .img .hover-box {
+            display: none; }
+        .feedback form .course-list-block .course-list-item .cost {
+          transform: scale(0);
+          position: absolute; }
+        .feedback form .course-list-block .course-list-item .title {
+          overflow: hidden;
+          padding: 0 9px;
+          display: inline-block;
+          height: 44px;
+          line-height: 44px;
+          width: 194px;
+          text-overflow: ellipsis; }
